# eid-mw-sdk-c

./: AUTHORS  ChangeLog  README  configure.ac
src/: Makefile.am  base.h  data.c  eid-data.c  eid-photo.c  eid-sign.c  eid-signmechanisms.c  eid-waitcard.c  eid-x509.c  photo.c  utils.c  utils.h
